@@ -23,11 +23,26 @@
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#include "openvas_networking.h"
-
+#include <stdlib.h>
 #include <fcntl.h>
 #include <unistd.h>
+#include <string.h>
+#include <ctype.h>
+#include <assert.h>
+#include <errno.h>
+#include <ifaddrs.h>
+#include <netdb.h>
+#include <net/if.h>
+#include <arpa/inet.h>
+
 #include <glib/gstdio.h>
+
+#ifdef __FreeBSD__
+#include <netinet/in.h>
+#define s6_addr32 __u6_addr.__u6_addr32
+#endif
+
+#include "openvas_networking.h"
 
  /* Global variables */
 
